syntax = "proto3";

package kyc;

option go_package = "github.com/adamtc007/KYC-DSL/api/pb;pb";

import "google/protobuf/timestamp.proto";

// KycCaseService provides operations for managing KYC cases
service KycCaseService {
  // GetCase retrieves a single KYC case by ID
  rpc GetCase (GetCaseRequest) returns (KycCase);

  // UpdateCase applies updates to an existing case
  rpc UpdateCase (UpdateCaseRequest) returns (KycCase);

  // ListCases streams all available KYC cases
  rpc ListCases (ListCasesRequest) returns (stream KycCase);

  // CreateCase creates a new KYC case from DSL
  rpc CreateCase (CreateCaseRequest) returns (KycCase);

  // DeleteCase removes a KYC case
  rpc DeleteCase (DeleteCaseRequest) returns (DeleteCaseResponse);

  // GetCaseVersions retrieves all versions of a case
  rpc GetCaseVersions (GetCaseVersionsRequest) returns (stream KycCaseVersion);
}

// GetCaseRequest contains the case ID to retrieve
message GetCaseRequest {
  string id = 1;
}

// UpdateCaseRequest contains updates to apply to a case
message UpdateCaseRequest {
  string id = 1;
  map<string, string> updates = 2;
}

// ListCasesRequest can include filters (currently empty)
message ListCasesRequest {
  int32 limit = 1;
  int32 offset = 2;
  string jurisdiction = 3;
  string policy = 4;
}

// CreateCaseRequest contains the DSL to create a new case
message CreateCaseRequest {
  string dsl = 1;
}

// DeleteCaseRequest contains the case ID to delete
message DeleteCaseRequest {
  string id = 1;
}

// DeleteCaseResponse confirms deletion
message DeleteCaseResponse {
  bool success = 1;
  string message = 2;
}

// GetCaseVersionsRequest retrieves all versions of a case
message GetCaseVersionsRequest {
  string case_name = 1;
}

// KycCase represents a complete KYC case
message KycCase {
  string id = 1;
  string name = 2;
  string jurisdiction = 3;
  string dsl = 4;
  string policy = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  string client_business_unit = 8;
  string function = 9;
  string obligation = 10;
  string kyc_token = 11;
  int32 version = 12;
  string sha256_hash = 13;
}

// KycCaseVersion represents a versioned snapshot of a case
message KycCaseVersion {
  string case_name = 1;
  int32 version = 2;
  string dsl_snapshot = 3;
  string sha256_hash = 4;
  google.protobuf.Timestamp created_at = 5;
  string created_by = 6;
  string amendment_type = 7;
}
